@@ -21,10 +21,8 @@ class JsonDecoderTest {
     @Test
     public void decode() throws Exception {
         JsonDataEntity[] data = (JsonDataEntity[]) new JsonDecoder().decode(
-                new String(
-                        Files.readAllBytes(
-                                Paths.get("src/test/resources/articles.json")
-                        )
+                Files.readString(
+                        Paths.get("src/test/resources/articles.json")
                 ),
                 JsonDataEntity[].class
         );
