@@ -27,10 +27,8 @@ public class TxtDecoderTest {
         expectedMap.put("nuclear", 10);
         expectedMap.put("gas", 5);
         Map<String, Integer> actualMap = new TxtDecoder().decode(
-                new String(
-                        Files.readAllBytes(
-                                Paths.get("src/test/resources/terms.txt")
-                        )
+                Files.readString(
+                        Paths.get("src/test/resources/terms.txt")
                 )
         );
         assertEquals(expectedMap, actualMap);
